# YiRootTemp

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.defaults.esp32s3  sdkconfig.old  work-esp-idf.code-workspace  谊瑞网关协议规范@BLE-MESH.doc
components/ble/: CMakeLists.txt  ble_bind.c  ble_gattc.c  ble_gatts.c  ble_mesh.c  ble_mesh_nvs.c
components/ble/include/: ble_bind.h  ble_gattc.h  ble_gatts.h  ble_mesh.h  ble_mesh_nvs.h
components/hal_drive/: CMakeLists.txt  hal_config.h  hal_exti.c  hal_exti.h  hal_gpio.c  hal_gpio.h  hal_nvs.c  hal_nvs.h  hal_rgb.c  hal_rgb.h  hal_rs485.c  hal_rs485.h  hal_spiffs.c  hal_spiffs.h  hal_timer.c  hal_timer.h  hal_uart.c  hal_uart.h  hal_usb_cdc.c  hal_usb_msc.c  hal_usb_msc.h  hal_voice.c  hal_voice.h
components/wifi/: CMakeLists.txt  client.key  mac_utils.c  root.crt  wifi_init.c  wifi_mqtt.c  wifi_nvs.c  wifi_ota.c  wifi_sntp.c  wifi_sock.c  wifi_user.c
components/wifi/include/: mac_utils.h  wifi_init.h  wifi_mqtt.h  wifi_nvs.h  wifi_ota.h  wifi_sntp.h  wifi_sock.h  wifi_user.h
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_user.c  idf_component.yml  番石榴情景.json  谊瑞情景.json
main/include/: app_lvgl.h  app_user.h
